# pico_w_zephyr

./: .gitignore  CMakeLists.txt  Kconfig  west.yml
adc/: CMakeLists.txt  Kconfig  prj.conf
adc/boards/: rpi_pico.overlay
adc/src/: main.cpp
adc/usb/: CMakeLists.txt  usbdevice.cpp  usbdevice.h
lib/: CMakeLists.txt  Kconfig
lib/i2c/: CMakeLists.txt  Kconfig
lib/i2c/include/: 24lc512.h  i2ccontroller.h  ii2ccontroller.h
lib/i2c/src/: 24lc512.cpp  i2ccontroller.cpp
lib/pushover/: CMakeLists.txt  Kconfig
lib/pushover/TestServer/: echoserver.py
lib/pushover/include/: pushover.h
lib/pushover/src/: pushover.cpp
lib/turtleweb/: CMakeLists.txt  Kconfig  sections-rom.ld
lib/turtleweb/include/: turtle_http_server.h
lib/turtleweb/src/: turtle_http_server.cpp
lib/turtleweb/static_web_resources/: index.html  main.js  server.py
lib/webtools/: CMakeLists.txt  Kconfig
lib/webtools/include/: dns_resolver.h
lib/webtools/src/: dns_resolver.cpp  sntp_client.cpp
lib/wificonnect/: CMakeLists.txt  Kconfig
lib/wificonnect/include/: status_led.h  wifi_connector.h
lib/wificonnect/src/: status_led.cpp
wifi/: CMakeLists.txt  Kconfig  prj.conf
wifi/boards/: esp32_devkitc_procpu.overlay  esp32_devkitc_wroom_procpu.overlay
wifi/src/: TurtleManager.cpp  TurtleManager.h  dns_resolver.cpp  dns_resolver.h  sntp_client.cpp  sntp_client.h  status_led.h  time_handler.cpp  time_handler.h  wifi_connector.h  wifi_test.cpp
zephyr/: module.yml
